--- a/src/content/projects-es.json
+++ b/src/content/projects-es.json
@@ -4,7 +4,7 @@
     "title" : "Aplicación Web Configurador de productos y CRM",
     "name" : "INSOLE 360",
     "startDate" : "2025-01",
-    "endDate" : "presente",
+    "endDate" : "present",
     "description" : [
       "Software configurador de productos y CRM personalizado para la empresa Motion & Balance encargado de la automatización del flujo de trabajo principal.",
       "Java y Spring Boot para el backend con modelo EAV (Entity Attribute Value) en la base de datos PostgreSQL para la configuración flexible e historificación de productos.",
@@ -14,12 +14,15 @@
     ],
     "technologies" : ["Java", "Spring Boot", "PostgreSQL", "Redis", "React", "TypeScript", "Vite", "TanStack"],
     "videosUrl" : [
-      "https://example.com/video1.mp4",
-      "https://example.com/video2.mp4"
+      {
+        "mp4" : "/videos/INSOLE360_DEMO.mp4",
+        "webm" : "/videos/INSOLE360_DEMO.webm"
+      }
     ],
     "imagesUrl" : [
-      "https://example.com/image1.jpg",
-      "https://example.com/image2.jpg"
+      "/images/insole360_homescreen.webp",
+      "/images/insole360_organizations.webp",
+      "/images/insole360_security.webp"
     ]
   },
   {
@@ -34,9 +37,13 @@
       "Tests unitarios con JUnit y Mockito y tests de integración con MockMVC."
     ],
     "technologies" : ["Java", "Spring Boot", "PostgreSQL", "React", "TypeScript", "Next.js", "JUnit", "Mockito"],
-    "githubUrl" : "github.com/allgaleano/tennis-tournament-manager",
-    "videosUrl" : [],
-    "imagesUrl" : []
+    "githubUrl" : "https://github.com/allgaleano/tennis-tournament-manager",
+    "videosUrl" : [
+      {
+        "mp4" : "/videos/MatchPoint_Overview.mp4",
+        "webm" : "/videos/MatchPoint_Overview.webm"
+      }
+    ]
   },
   {
     "id": 3,
@@ -47,7 +54,7 @@
       "Implementé una API REST con JAX-RS y MySQL server, paginación manual con opciones de navegación y filtrado, adicionalmente desarrollé un cliente CLI con Java para probar la API de forma dinámica."
     ],
     "technologies" : ["Java", "JAX-RS", "MySQL"],
-    "githubUrl" : "github.com/allgaleano/Wines-Rating-API-Rest"
+    "githubUrl" : "https://github.com/allgaleano/Wines-Rating-API-Rest"
   },
   {
     "id": 4,
@@ -58,6 +65,9 @@
       "Desarrollé una aplicación web que emplea el algoritmo A* para cálculo de rutas con estimaciones heurísticas en el metro de Lyon. Implementada con Node.js y Next.js."
     ],
     "technologies" : ["Node.js", "Next.js", "JavaScript"],
-    "githubUrl" : "github.com/allgaleano/NodeMetroLyon"
+    "githubUrl" : "https://github.com/allgaleano/NodeMetroLyon",
+    "imagesUrl" : [
+      "/images/metro-lyon.webp"
+    ]
   }
 ]
